<resources>
    <string name="app_name">VeriparkApp</string>
    <string name="veripark">veripark</string>
    <string name="mkb_hisse_senetleri_endeksler">IMKB Hisse Senetleri/Endeksleri</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shares_and_bills">Hisse ve Senetler</string>
    <string name="rose_shares">IMKB Yükselenler</string>
    <string name="fell_shares">IMKB Düşenler</string>
    <string name="for_stock_volumes_30">IMKB Hacme Göre - 30</string>
    <string name="for_stock_volumes_50">IMKB Hacme Göre - 50</string>
    <string name="for_stock_volumes_100">IMKB Hacme Göre - 100</string>
    <string name="search">Ara</string>
    <string name="undo">Geri</string>
    <string name="symbol">Sembol</string>
    <string name="price">Fiyat</string>
    <string name="changing">Değişim %</string>
    <string name="daily_high">Günlük Yüksek</string>
    <string name="daily_low">Günlük Düşük</string>
    <string name="recent">Son</string>
    <string name="volume">Hacim</string>
    <string name="count">Adet</string>
    <string name="no_internet_connection">İnternet bağlantısı yok!</string>
    <string name="error">Hata</string>
    <string name="retry">Yeniden Dene</string>
    <string name="base_url">http://mobileexam.veripark.com/mobileforeks/</string>
    <string name="imkb_stockes_indexes">IMKB Hisse Senetleri/Endeksleri</string>
    <string name="index_status">Hisse Statüsü</string>
    <string name="difference">%Fark</string>
    <string name="transaction_volume">İşlem Hacmi</string>
    <string name="buying">Alış</string>
    <string name="selling">Satış</string>
    <string name="hour">Saat</string>
    <string name="imkb_stockes_indexes_list">Hisse Senedi ve Endeksler</string>
    <string name="dlg_loading">Yükleniyor...</string>
</resources>
