<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="volkan.com.veriparkapp.ui.detail.DetailFragment">

    <include
        android:id="@+id/navbar"
        layout="@layout/layout_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_common"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_common"
                    android:text="@string/symbol"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_symbol"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_common"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_large"
                    tools:text="ACIBD" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_common"
                    android:text="@string/price"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_common"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_large"
                    tools:text="2,30" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_common"
                    android:text="@string/changing"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_changing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="@dimen/padding_common"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size_large"
                        tools:text="-0,10" />

                    <ImageView
                        android:id="@+id/iv_changing_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:padding="@dimen/padding_common"
                        tools:layout_toRightOf="@id/tv_changing"
                        tools:src="@drawable/ic_search_black_24dp" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_common"
                    android:text="@string/daily_high"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_daily_high"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_common"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_large"
                    tools:text="ACIBD" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_common"
                    android:text="@string/daily_low"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_daily_low"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_common"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_large"
                    tools:text="ACIBD" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_common"
                    android:text="@string/recent"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_current"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_common"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_large"
                    tools:text="ACIBD" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_common"
                    android:text="@string/volume"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_volume"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_common"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_large"
                    tools:text="ACIBD" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_common"
                    android:text="@string/count"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_large"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="@dimen/padding_common"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_large"
                    tools:text="ACIBD" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>
